[package]
name = "surqls"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
env_logger = "0.11.1"
ropey = "1.6.1"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5.3"
log = "0.4.20"
im-rc = "15.1.0"
async-recursion = "1.0.5"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
taplo = {version="0.12.1", features=["serde"] }
toml = "0.8.8"
reqwest = { version = "0.11.23", features = ["json"] }
chrono = "0.4.33"
url = "2.5.0"
regex = "1.10.3"
